# velo-action

./: .actrc  .dockerignore  .env.dev  .env.example  .env.template  .envrc.template  .flake8  .gitignore  .isort.cfg  .markdownlint.yaml  .mypy.ini  .pre-commit-config.yaml  .pylintrc  .tool-versions  .yamllint  CHANGELOG.md  CHANGELOG2.md  Dockerfile  Makefile  README.md  action.yml  centro.yml  changelog.md  docker-compose.yml  entrypoint.sh  env.dev  env.dev-vars  mkdocs.yml  pyproject.toml  pytest.ini  releasenotes.md  velo-action.sh
.deploy/: app.yml
.deploy/rbac/: v1_serviceaccount.yaml
.deploy/terraform/: backend.tf  main.tf  values.json  variables.tf
.devcontainer/: devcontainer.json
.github/: codeowners  dependabot.yml  pull_request_template.md  release-drafter.yml
.github/actions/composite/: action.yml
.github/actions/docs-to-centro/: action.yml
.github/actions/gitversion/: action.yml
.github/actions/setup-python/: action.yml
.github/actions/velo/: action.yml
.github/workflows/: cd.yml  ci.yml  ci_build.yml  ci_lint_test.yml  codeql-analysis.yml  docs-to-centro.yml  lint-markdown.yml  lint-pre-commit.yml  lint-python.yml  lint-terraform.yml  lint-yaml.yml  release.yml  release.yml.disabled  test-build-release.yml  test.yaml  test.yaml.disable  test_action_local.yml  test_action_local.yml.disable  test_action_main.yml  test_action_main.yml.disable  update-changelog.yml  velo-old.yml.disabled  velo.yml  velo_local.yml
docs/: README.md  development.md  release.md  usage.md
scripts/: release.sh
test/: test_gitversion.py  test_octopus.py
tests/: test_arg_parser.py  test_gcp.py  test_gitversion.py  test_input_settings.py  test_octopus_client.py  test_octopus_deployment.py  test_octopus_release.py
velo-action/: main.py  releasenotes.sh
velo_action/: action.py  conftest.py  gcp.py  gcp_storage.py  github.py  gitversion.py  main.py  octopus.py  octopus_api.py  proc_utils.py  release_note.py  settings.py  test_utils.py  tracing_helpers.py  utils.py  version.py
velo_action/octopus/: client.py  deployment.py  deployment_state.py  release.py  test_decorators.py
velo_action/octopus/tests/: test_decorators.py  test_octopus_client.py  test_octopus_deployment.py  test_octopus_release.py  test_release_notes.py
velo_action/tests/: action_trace_output.json  conftest.py  test_action_inputs.py  test_input_settings.py  test_main.py  test_release_notes.py  test_settings.py  test_tracing.py  test_utils.py  test_version.py
