[tool.poetry]
name = "velo-action"
version = "1.0.74"
description = "Github Action used to generate velo deploy version and trigger a release."
authors = ["Cloud-platform team <team-cloud-platform@oda.com>"]

[tool.poetry.scripts]
velo_action = "velo_action.main:main"

[tool.poetry.dependencies]
python = "3.10.2"  # msut be the same as the Dockerfile
semantic-version = "^2.10"
appdirs = "^1.4"
google = "^3.0"
google-auth = "^2.9.0"
google-cloud-storage = "^2.3"
google-cloud-secret-manager = "^2.11"
pydantic = "^1.8.2"
opentelemetry-sdk = "^1.6.2"
opentelemetry-exporter-jaeger = "^1.11.0"
opentelemetry-api = "^1.6.2"
opentelemetry-exporter-otlp = "^1.6.2"
PyYAML = "^6.0"
types-PyYAML = "^6.0.3"
loguru = "^0.6.0"
semver = "^2.13.0"
PyJWT = "^2.4.0"
cryptography = "^37.0.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
black = "^22.1.0"
flake8 = "^5.0"
flake8-bugbear = "^22.4"
mypy = "^0.961"
pylint = "^2.14"
pytest-mock = "^3.6"
docker-image-size-limit = "^0.4.1"
types-requests = "^2.28.2"
mkdocs-techdocs-core = "^1.1.2"
types-PyYAML = "^6.0.5"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py310']
safe = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | _build
  | build
  | dist
  | migrations
  | .terraform
  | temp-deploy
)/
'''
